v0.99.0: - Bioconductor submission
v1.1.2: - Bioconductor accepted devel version
v1.1.3: - New features: 
	i) the level of moderation is calculated automatically, 
	ii) permutation approach to adjust p-values in sQTL analyses
v1.1.4: - Use data frames with counts and genotypes when creating the dmDSdata and dmSQTLdata objects
v1.3.1: - Equals to v1.1.4 
v1.3.2: - Implementation of the two-stage test dmTwoStageTest()
v1.3.3: - Implementation of the regression framework. Additionally:
	i) removing max_features argument from dmFilter
	ii) keeping only the grid approach for estimating tagwise dispersion 
	iii) allow to use only a subset of genes (disp_subset parameter) in common dispersion estimation to speed up the calculations. 